--- a/cms7-dev/src/index.html
+++ b/cms7-dev/src/index.html
@@ -15,7 +15,13 @@
 </head>
 
 <body>
-  <app-root>loading</app-root>
+  <app-root>
+    <div class="row">
+      <div class="col-12 text-center">
+        <img src="./assets/gif/loading-fast.gif" class="mt-5 h-50">
+      </div>
+    </div>
+  </app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
